Sigil 0.6.0 TBA 
    - Implement issue 1622: Allow Font Obfuscation to work for multiple font files.
    - Implement issue 1620: Well-formed check option should be removed and replaced with more appropriate automatic checking.
    - Implement issue 1617: Split should split at cursor position not at end of paragraph.
    - Implement issue 1619: Generate TOC should show tooltip details for the heading in case title and text is blank.
    - Implement issue 1618: Generate TOC should allow changing heading levels in document and TOC.
    - Implement issue 1615: Generate TOC should number sigil_toc_id's across all files and delete unused id's before generating.
    - Implement issue 1612: Improve performance of merging files.
    - Implement issue 1611: Improve performance of switching and closing tabs.
    - Implement issue 1610: Use html instead of xhtml as the default extension for new blank HTML files.
    - Implement issue 1606: Allow rename of titles in Generate Table Of Contents and show filenames in tooltip.
    - Implement issue 1601: Delete unused Images.
    - Implement issue 1602: Delete unused Styles.
    - Implement issue 1603: Allow formatting buttons to work in Code View.
    - Implement issue 1597: Show HTML tag information for current location in text while in Book View.
    - Implement issue 1594: Allow miscellaneous text files to be edited and others to be opened externally.
    - Implement issue 1590: Insert image should allow insert from disk.
    - Implement issue 1557: Sigil requires Qt 4.8 or above.
    - Implement issue 1586: Spellcheck should allow setting a keyboard shortcut for Ignore Word to speed editing.
    - Implement issue 1585: Spellcheck should have a menu entry to clear all ignored words.
    - Implement issue 1584: Sigil should allow CSS file to be edited while viewing HTML.
    - Implement issue 1583: Sigil should remember the current view state when it restarts.
    - Implement issue 1573: Improve performance of bulk rename.