@@ -69,55 +69,55 @@ GuideSemantics::GuideSemantics()
 void GuideSemantics::CreateGuideMapping()
 {
     m_GuideTypeMapping[ GuideSemantics::Cover ]           
-        = make_tuple( QString( "cover" ),           QString( "Cover" ) );
+        = make_tuple( QString( "cover" ),           QObject::tr( "Cover" ) );
 
     m_GuideTypeMapping[ GuideSemantics::TitlePage ]       
-        = make_tuple( QString( "title-page" ),      QString( "Title Page" ) );
+        = make_tuple( QString( "title-page" ),      QObject::tr( "Title Page" ) );
 
     m_GuideTypeMapping[ GuideSemantics::TableOfContents ] 
-        = make_tuple( QString( "toc" ),             QString( "Table Of Contents" ) );
+        = make_tuple( QString( "toc" ),             QObject::tr( "Table Of Contents" ) );
 
     m_GuideTypeMapping[ GuideSemantics::Index ] 
-        = make_tuple( QString( "index" ),           QString( "Index" ) );
+        = make_tuple( QString( "index" ),           QObject::tr( "Index" ) );
 
     m_GuideTypeMapping[ GuideSemantics::Glossary ] 
-        = make_tuple( QString( "glossary" ),        QString( "Glossary" ) );
+        = make_tuple( QString( "glossary" ),        QObject::tr( "Glossary" ) );
 
     m_GuideTypeMapping[ GuideSemantics::Acknowledgements ] 
-        = make_tuple( QString( "acknowledgements" ), QString( "Acknowledgements" ) );
+        = make_tuple( QString( "acknowledgements" ), QObject::tr( "Acknowledgements" ) );
 
     m_GuideTypeMapping[ GuideSemantics::Bibliography ] 
-        = make_tuple( QString( "bibliography" ),    QString( "Bibliography" ) );
+        = make_tuple( QString( "bibliography" ),    QObject::tr( "Bibliography" ) );
 
     m_GuideTypeMapping[ GuideSemantics::Colophon ] 
-        = make_tuple( QString( "colophon" ),        QString( "Colophon" ) );
+        = make_tuple( QString( "colophon" ),        QObject::tr( "Colophon" ) );
 
     m_GuideTypeMapping[ GuideSemantics::CopyrightPage ] 
-        = make_tuple( QString( "copyright-page" ),  QString( "Copyright Page" ) );
+        = make_tuple( QString( "copyright-page" ),  QObject::tr( "Copyright Page" ) );
 
     m_GuideTypeMapping[ GuideSemantics::Dedication ] 
-        = make_tuple( QString( "dedication" ),      QString( "Dedication" ) );
+        = make_tuple( QString( "dedication" ),      QObject::tr( "Dedication" ) );
 
     m_GuideTypeMapping[ GuideSemantics::Epigraph ] 
-        = make_tuple( QString( "epigraph" ),        QString( "Epigraph" ) );
+        = make_tuple( QString( "epigraph" ),        QObject::tr( "Epigraph" ) );
 
     m_GuideTypeMapping[ GuideSemantics::Foreword ] 
-        = make_tuple( QString( "foreword" ),        QString( "Foreword" ) );
+        = make_tuple( QString( "foreword" ),        QObject::tr( "Foreword" ) );
 
     m_GuideTypeMapping[ GuideSemantics::ListOfIllustrations ] 
-        = make_tuple( QString( "loi" ),             QString( "List Of Illustrations" ) );
+        = make_tuple( QString( "loi" ),             QObject::tr( "List Of Illustrations" ) );
 
     m_GuideTypeMapping[ GuideSemantics::ListOfTables ] 
-        = make_tuple( QString( "lot" ),             QString( "List Of Tables" ) );
+        = make_tuple( QString( "lot" ),             QObject::tr( "List Of Tables" ) );
 
     m_GuideTypeMapping[ GuideSemantics::Notes ] 
-        = make_tuple( QString( "notes" ),           QString( "Notes" ) );
+        = make_tuple( QString( "notes" ),           QObject::tr( "Notes" ) );
 
     m_GuideTypeMapping[ GuideSemantics::Preface ] 
-        = make_tuple( QString( "preface" ),         QString( "Preface" ) );
+        = make_tuple( QString( "preface" ),         QObject::tr( "Preface" ) );
 
     m_GuideTypeMapping[ GuideSemantics::Text ] 
-        = make_tuple( QString( "text" ),            QString( "Text" ) );
+        = make_tuple( QString( "text" ),            QObject::tr( "Text" ) );
 }
 
 void GuideSemantics::CreateReferenceTypeToGuideEnum()
